--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <link rel="stylesheet" href="./Css/Estilos.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <!--iMPORTE UN TIPO DE LETA-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <title>Juegos</title>
 </head>
 
-<body>
+<body id="Fondo">
+
+    <!--SECCION - CONTENEDOR GENERAL-------------------------------------------------------------->
+
+    <section id="Seccion_suprema" class="Contenedor_Supremo">
+
+
+
+
+        <!--SECCION - 1 ------------------------------------------------------------------------------------------------------->
+
+        <section class="Seccion_01" id="Seccion_01">
+            <div class="Contenedor_RC" id="Contenedor_RC" onclick="Graficos_fondo()">
+                <div class="Recursos" id="Recursos"></div>
+            </div>
+            <h1 class="Nombre">IRON FIST</h1>
+            <h1 class="Texto_Principal">¿LISTO PARA DEFENDER<br> EL PLANETA?</h1>
+            <button class="Boton" id="Juego" onclick="Mover()">JUGAR</button>
+        </section>
+        <!--SECCION - 3 ------------------------------------------------------------------------------------------------------->
+
+        <section id="Reglas">
+            <h1 class="Titulo_Reglas">Antes de empezar lee,<br><br> las reglas.</h1>
+            <img src="./Imagenes/JUEGO.jpg" class="Img_reglas">
+            <div class="Reglas_estilos" id="R1">
+                <h3>REGLA : 1</h3>
+                <p>Lo que se encuentra señalado son los puntos, que segun tu progreso, se irán incrementando al desviar meteoritos de la tierra (Esto al pasar el cursor sobre el meteorito que se acerca), si los puntos obtenidos llegan a 30, es una victoria
+                    automática, pero recuerda que los meteoritos son impredecibles en su ataque así que tienes que estar atento a su llegada
+                </p>
+            </div>
+
+
+            <div class="Reglas_estilos" id="R2">
+                <h3>REGLA : 2</h3>
+                <p>El tiempo que se señala es el límite máximo que puede aguantar la defensa, siendo unos 60 segundos, en los que el jugador debe cumplir el límite de puntos o sera un GAMER OVER automático, asi que recuerda ser rápido recolectando puntos.
+                </p>
+            </div>
+
+
+            <div class="Reglas_estilos" id="R3_4">
+                <h3>REGLA : 3 y 4</h3>
+                <p>Estos son los meteoritos que debes evitar que ingresen a la tierra, por lo general suelen ser rápidos así que recuerda: no te descuides o confies por que en el momento que lo hagas, estos llegarán a la tierra, es por ello que una raya
+                    señala el límite por el cual ya es inevitable nuestra salvación (GAME OVER)
+                </p>
+            </div>
+
+            <div class="Listo" onclick="Mover_2()">¿Estas listo?</div>
+
+
+        </section>
+
+
+
+        <!--SECCION - 4 ------------------------------------------------------------------------------------------------------->
+
+        <section id="Seccion_2">
+            <h1 class="Titulo_historia" id="Titulo_historia">Todo empezo cuando...</h1>
+            <div class="Contenedor_Historia" id="Mensaje">
+                <h3 style="margin-top: -1%;">CAPÍTULO I: NUESTRA SALVACIÓN</h3>
+                En cierto día, las noticias de todo el mundo anunciaron que muy pronto se acercarían meteoritos de gran tamaño a la tierra y que solo era cuestión de horas para que comenzaran a llegar; el resultado de esto fue inmediato ya que miles de personas comenzaron
+                a alertarse y a hacer disturbios, en centros comerciales y areas publicas, para que el gobierno les diera alguna respuesta; pero el gobierno ya tenía un plan de contingencia, ya que ellos se habían enterado de la llegada de estos con días
+                de antelación preparando con la ayuda del resto de gobiernos, la iniciativa "IRON FIST", que consistía en los proyectiles más letales de la tierra y nuestra única salvación
+                <div class="BOTONES_2">
+                    <div class="Boton_preparado" onclick="Mover_3()">¿Estas preparado? </div>
+                    <div class="Contenedor_narracion" id="Contenedor_narracion">
+                        <i class="fas fa-play" id="VOLUMEN"></i><i class="fas fa-pause" id="PAUSE"></i></div>
+                </div>
+            </div>
+            <img src="./Imagenes/Metioritos_Callendo.jpg" class="Imgane_metiorito" id="Imagen">
+        </section>
 
 </body>
 
