--- a/Index.html
+++ b/Index.html
@@ -84,7 +84,7 @@
             </div>
             <img src="./Imagenes/Metioritos_Callendo.jpg" class="Imgane_metiorito" id="Imagen">
         </section>
-
+    </section>
 </body>
 
 </html>
