--- a/Niveles/Nivel2.html
+++ b/Niveles/Nivel2.html
@@ -64,7 +64,7 @@
                     </div>
                     <!--Titulo de la seccion start-->
                     <br>
-                    <div class=Playlvl2 id="Playlvl2">JUGAR</div>
+                    <div class="Playlvl2" id="Playlvl2">JUGAR</div>
                     <!--Boton de jugar-->
                     <div id="Contenedor_contadorlvl2"><span id="RGBlvl2"></span></div>
                     <!--Span que contiene el conteo-->
@@ -91,8 +91,9 @@
 
                 </div>
                 <!--FIN DEL JUEGO-->
+            </div>
         </section>
-
+    </section>
 </body>
 
 </html>
